fixing how the image appears using z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h3{
       color: #8f8f8f;
   }
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;/* lr t b */
 }
 /* navigation bar */
 .navbar{
@@ -58,10 +58,14 @@ h3{
  .title-img{
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
  }
 /* Features */
 #features{
     padding: 7% 15%; /*tb lr */
+    position: relative;
+    background-color: white;
 }
 .features-col{
     text-align: center;
@@ -77,7 +81,6 @@ h3{
 }
  /* testimonial section */
 #testimonials{
-    /* padding: 7% 15% ; */
     text-align: center;
     background-color: #ef8172;
     color: white;
